@@ -245,6 +245,13 @@ subprojects {
             from javadoc.destinationDir
         }
 
+        configure([javadoc]) {
+            options.encoding "UTF-8"
+            options.docEncoding "UTF-8"
+            options.charSet "UTF-8"
+            options.jFlags "-Xms64M", "-Xmx512M", "-XX:MaxPermSize=256m"
+        }        
+
         artifacts {
             archives jar
             archives sourcesJar
